src/test/ui/asm/aarch64/bad-options.stderr
error: the `nomem` and `readonly` options are mutually exclusive
  --> $DIR/bad-options.rs:8:18
   |
LL |         asm!("", options(nomem, readonly));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: the `pure` and `noreturn` options are mutually exclusive
  --> $DIR/bad-options.rs:10:18
   |
LL |         asm!("", options(pure, nomem, noreturn));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: asm with the `pure` option must have at least one output
  --> $DIR/bad-options.rs:10:18
   |
LL |         asm!("", options(pure, nomem, noreturn));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: asm with the `pure` option must have at least one output
  --> $DIR/bad-options.rs:13:33
   |
LL |         asm!("{}", in(reg) foo, options(pure, nomem));
   |                                 ^^^^^^^^^^^^^^^^^^^^

error: asm outputs are not allowed with the `noreturn` option
  --> $DIR/bad-options.rs:15:20
   |
LL |         asm!("{}", out(reg) foo, options(noreturn));
   |                    ^^^^^^^^^^^^

error: asm with `clobber_abi` must specify explicit registers for outputs
  --> $DIR/bad-options.rs:22:20
   |
LL |         asm!("{}", out(reg) foo, clobber_abi("C"));
   |                    ^^^^^^^^^^^^  ---------------- clobber_abi
   |                    |
   |                    generic outputs

error: expected one of `)`, `att_syntax`, `may_unwind`, or `raw`, found `nomem`
  --> $DIR/bad-options.rs:28:25
   |
LL | global_asm!("", options(nomem));
   |                         ^^^^^ expected one of `)`, `att_syntax`, `may_unwind`, or `raw`

error: expected one of `)`, `att_syntax`, `may_unwind`, or `raw`, found `readonly`
  --> $DIR/bad-options.rs:30:25
   |
LL | global_asm!("", options(readonly));
   |                         ^^^^^^^^ expected one of `)`, `att_syntax`, `may_unwind`, or `raw`

error: expected one of `)`, `att_syntax`, `may_unwind`, or `raw`, found `noreturn`
  --> $DIR/bad-options.rs:32:25
   |
LL | global_asm!("", options(noreturn));
   |                         ^^^^^^^^ expected one of `)`, `att_syntax`, `may_unwind`, or `raw`

error: expected one of `)`, `att_syntax`, `may_unwind`, or `raw`, found `pure`
  --> $DIR/bad-options.rs:34:25
   |
LL | global_asm!("", options(pure));
   |                         ^^^^ expected one of `)`, `att_syntax`, `may_unwind`, or `raw`

error: expected one of `)`, `att_syntax`, `may_unwind`, or `raw`, found `nostack`
  --> $DIR/bad-options.rs:36:25
   |
LL | global_asm!("", options(nostack));
   |                         ^^^^^^^ expected one of `)`, `att_syntax`, `may_unwind`, or `raw`

error: expected one of `)`, `att_syntax`, `may_unwind`, or `raw`, found `preserves_flags`
  --> $DIR/bad-options.rs:38:25
   |
LL | global_asm!("", options(preserves_flags));
   |                         ^^^^^^^^^^^^^^^ expected one of `)`, `att_syntax`, `may_unwind`, or `raw`

error: invalid ABI for `clobber_abi`
  --> $DIR/bad-options.rs:20:18
   |
LL |         asm!("", clobber_abi("foo"));
   |                  ^^^^^^^^^^^^^^^^^^
   |
   = note: the following ABIs are supported on this target: `C`, `system`, `efiapi`

error: aborting due to 13 previous errors

